Fixing to work with stash 3.2.  Forgive me.